Fixed the overflow in y-direction for three pages

--- a/Css-files/content.css
+++ b/Css-files/content.css
@@ -392,6 +392,7 @@ div.deals:hover{
     color:white;
     display: flex;
     justify-content: space-evenly;
+    flex-direction: column;
 }
 
 .footer-colums{
